package com.iluwatar.dao.factory;

/**
 * Enum class for Dao type
 */
public enum DaoType {
    ReadOnly,
    ReadWrite
}
